stateless-flask/kubernetes/ExternalName.yml
apiVersion: v1
kind: Service
metadata:
  name: stateless-flask-service-externalname
  namespace: default
spec:
  type: ExternalName
  externalName: stateless-flask.stateless-flask.svc.cluster.local
