stateless-flask/kubernetes/clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: stateless-flask-clusterip-service
  namespace: stateless-flask
spec:
  type: ClusterIP
  selector:
    app: stateless-flask
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
