stateless-flask/kubernetes/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: stateless-flask-loadbalancer-service
  namespace: stateless-flask
spec:
  type: LoadBalancer
  selector:
    app: stateless-flask
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
