stateless-flask/kubernetes/nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: stateless-flask-nodeport-service
  namespace: stateless-flask
spec:
  type: NodePort
  selector:
    app: stateless-flask
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30000
    protocol: TCP
