stateless-flask/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: stateless-flask.<ingress-ip>.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /tasks
        backend:
          service:
            name: stateless-flask-service-externalname
            port: 
              number: 5000
  ingressClassName: nginx
